--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.4.2",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-opener": "^2",
     "axios": "^1.13.2",
@@ -20,6 +22,8 @@
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.10.1",
     "tailwind-merge": "^3.4.0",
+    "three": "^0.160.1",
+    "urdf-loader": "^0.12.6",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
@@ -27,6 +31,7 @@
     "@tauri-apps/cli": "^2",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "@types/three": "^0.160.0",
     "@vitejs/plugin-react": "^4.6.0",
     "autoprefixer": "^10.4.22",
     "postcss": "^8.5.6",
