feat(app): improve sidebar navigation and lazy page loading
- Enhance Sidebar with collapsible sections
- Add lazy loading for all feature pages
- Add new routes for auth, alerts, fleet pages
- Fix Modal focus trap handling
- Update API client base URL config

--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -5,6 +5,7 @@
     "paths": {
       "@/*": ["src/*"]
     },
+    "types": ["vite/client", "@react-three/fiber"],
     "useDefineForClassFields": true,
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
