--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
     "@google/generative-ai": "^0.24.1",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.4.2",
+    "@tailwindcss/typography": "^0.5.19",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-opener": "^2",
     "axios": "^1.13.2",
@@ -20,6 +21,7 @@
     "immer": "^11.0.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.10.1",
     "tailwind-merge": "^3.4.0",
     "three": "^0.160.1",
