--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "db:studio": "prisma studio"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.21.0",
     "@prisma/client": "^6.19.1",
     "axios": "^1.7.9",
     "bcryptjs": "^3.0.3",
