feat(server): add rate limiting and CORS configuration
- Add express-rate-limit for API protection (100 req/min, 20/15min for auth)
- Make CORS origins configurable via CORS_ORIGINS environment variable
- Configure trust proxy for proper client IP detection behind reverse proxy
- Skip rate limiting for health check endpoints

--- a/server/package.json
+++ b/server/package.json
@@ -21,10 +21,12 @@
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "express-rate-limit": "^8.2.1",
     "jsonwebtoken": "^9.0.3",
     "prisma": "^6.19.1",
     "uuid": "^11.0.3",
-    "ws": "^8.18.0"
+    "ws": "^8.18.0",
+    "zod": "^4.2.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
