--- a/robot-agent/package.json
+++ b/robot-agent/package.json
@@ -1,39 +1,39 @@
 {
-  "name": "@robo-mind/simulated-robot-agent",
-  "version": "1.0.0",
-  "description": "A2A agent that simulates a humanoid robot for RoboMindOS",
-  "type": "module",
-  "main": "dist/index.js",
-  "scripts": {
-    "dev": "tsx watch src/index.ts",
-    "dev:so101": "DOTENV_CONFIG_PATH=.env.so101 tsx watch src/index.ts",
-    "dev:light": "DOTENV_CONFIG_PATH=.env.light tsx watch src/index.ts",
-    "dev:heavy": "DOTENV_CONFIG_PATH=.env.heavy tsx watch src/index.ts",
-    "build": "tsc",
-    "start": "node dist/index.js",
-    "start:so101": "DOTENV_CONFIG_PATH=.env.so101 node dist/index.js",
-    "start:light": "DOTENV_CONFIG_PATH=.env.light node dist/index.js",
-    "start:heavy": "DOTENV_CONFIG_PATH=.env.heavy node dist/index.js",
-    "typecheck": "tsc --noEmit"
-  },
-  "dependencies": {
-    "@a2a-js/sdk": "^0.3.3",
-    "@genkit-ai/googleai": "^1.15.5",
-    "body-parser": "^2.2.0",
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.0",
-    "express": "^4.21.2",
-    "genkit": "^1.18.0",
-    "uuid": "^11.0.3",
-    "ws": "^8.18.0"
-  },
-  "devDependencies": {
-    "@types/cors": "^2.8.17",
-    "@types/express": "^5.0.1",
-    "@types/node": "^22.13.14",
-    "@types/uuid": "^10.0.0",
-    "@types/ws": "^8.5.13",
-    "tsx": "^4.19.3",
-    "typescript": "^5.8.2"
-  }
+    "name": "@robo-mind/simulated-robot-agent",
+    "version": "1.0.0",
+    "description": "A2A agent that simulates a humanoid robot for RoboMindOS",
+    "type": "module",
+    "main": "dist/index.js",
+    "scripts": {
+        "dev": "tsx watch src/index.ts",
+        "dev:so101": "DOTENV_CONFIG_PATH=.env.so101 tsx watch src/index.ts",
+        "dev:light": "DOTENV_CONFIG_PATH=.env.light tsx watch src/index.ts",
+        "dev:h1": "DOTENV_CONFIG_PATH=.env.h1 tsx watch src/index.ts",
+        "build": "tsc",
+        "start": "node dist/index.js",
+        "start:so101": "DOTENV_CONFIG_PATH=.env.so101 node dist/index.js",
+        "start:light": "DOTENV_CONFIG_PATH=.env.light node dist/index.js",
+        "start:heavy": "DOTENV_CONFIG_PATH=.env.heavy node dist/index.js",
+        "typecheck": "tsc --noEmit"
+    },
+    "dependencies": {
+        "@a2a-js/sdk": "^0.3.3",
+        "@genkit-ai/googleai": "^1.15.5",
+        "body-parser": "^2.2.0",
+        "cors": "^2.8.5",
+        "dotenv": "^17.2.0",
+        "express": "^4.21.2",
+        "genkit": "^1.18.0",
+        "uuid": "^11.0.3",
+        "ws": "^8.18.0"
+    },
+    "devDependencies": {
+        "@types/cors": "^2.8.17",
+        "@types/express": "^5.0.1",
+        "@types/node": "^22.13.14",
+        "@types/uuid": "^10.0.0",
+        "@types/ws": "^8.5.13",
+        "tsx": "^4.19.3",
+        "typescript": "^5.8.2"
+    }
 }
