fix(docker): generate Prisma client before TypeScript build
Prisma types must be generated before npm run build so TypeScript
can find the @prisma/client exports during compilation.

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -14,12 +14,14 @@ WORKDIR /app
 COPY package*.json ./
 RUN npm ci
 
-# Copy source and build
+# Copy source
 COPY . .
-RUN npm run build
 
-# Generate Prisma client
+# Generate Prisma client (must happen before TypeScript build)
 RUN npx prisma generate
+
+# Build TypeScript
+RUN npm run build
 
 # -----------------------------------------------------------------------------
 # Stage 2: Runner
