--- a/app/package.json
+++ b/app/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.13.2",
     "clsx": "^2.1.1",
     "immer": "^11.0.1",
+    "lucide-react": "^0.562.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-markdown": "^10.1.0",
