--- a/app/nginx.conf
+++ b/app/nginx.conf
@@ -40,17 +40,24 @@ server {
         add_header Content-Type text/plain;
     }
 
-    # API proxy (optional - for same-origin deployments)
-    # Uncomment if running app and server on same domain
-    # location /api {
-    #     proxy_pass http://server:3001;
-    #     proxy_http_version 1.1;
-    #     proxy_set_header Upgrade $http_upgrade;
-    #     proxy_set_header Connection "upgrade";
-    #     proxy_set_header Host $host;
-    #     proxy_set_header X-Real-IP $remote_addr;
-    #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    #     proxy_set_header X-Forwarded-Proto $scheme;
-    #     proxy_read_timeout 86400;
-    # }
+    # API proxy - forward to backend server
+    location /api {
+        proxy_pass http://server:3001;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_read_timeout 86400;
+    }
+
+    # Well-known A2A endpoints (agent cards)
+    location /.well-known/a2a {
+        proxy_pass http://server:3001;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
 }
