fix(docker): use relative URLs and enable auth by default
- Change VITE_API_BASE_URL to /api for nginx proxy
- Remove hardcoded WebSocket URLs (use dynamic detection)
- Set AUTH_DISABLED=false by default for production-like behavior

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -151,7 +151,7 @@ services:
       NODE_ENV: production
       DATABASE_URL: postgresql://robomind:${POSTGRES_PASSWORD:-robomind-dev}@postgres:5432/robomind
       JWT_SECRET: ${JWT_SECRET:-dev-secret-change-in-production}
-      AUTH_DISABLED: ${AUTH_DISABLED:-true}
+      AUTH_DISABLED: ${AUTH_DISABLED:-false}
       GOOGLE_API_KEY: ${GOOGLE_API_KEY:-}
       PUBLIC_URL: ${PUBLIC_URL:-http://localhost:3001}
       CORS_ORIGINS: http://localhost,http://localhost:80,http://app,http://app:80,http://192.168.178.67:1420,http://192.168.178.67
@@ -188,9 +188,9 @@ services:
       context: ./app
       dockerfile: Dockerfile
       args:
-        VITE_API_BASE_URL: ${VITE_API_BASE_URL:-http://localhost:3001/api}
-        VITE_WS_URL: ${VITE_WS_URL:-ws://localhost:3001/api/a2a/ws}
-        VITE_A2A_SERVER_URL: ${VITE_A2A_SERVER_URL:-http://localhost:3001}
+        VITE_API_BASE_URL: ${VITE_API_BASE_URL:-/api}
+        VITE_WS_URL: ${VITE_WS_URL:-}
+        VITE_A2A_SERVER_URL: ${VITE_A2A_SERVER_URL:-}
     container_name: robomind-app
     ports:
       - "80:80"
