fix(helm): add updateStrategy to StatefulSets
- Postgres: OnDelete to prevent data loss during updates
- NATS: RollingUpdate with partition control
- RustFS: OnDelete for data safety

--- a/helm/robomind/templates/nats-statefulset.yaml
+++ b/helm/robomind/templates/nats-statefulset.yaml
@@ -13,6 +13,11 @@ metadata:
 spec:
   serviceName: {{ include "robomind.nats.fullname" . }}
   replicas: 1
+  # Use RollingUpdate with partition for controlled updates
+  updateStrategy:
+    type: RollingUpdate
+    rollingUpdate:
+      partition: 0
   selector:
     matchLabels:
       {{- include "robomind.selectorLabels" . | nindent 6 }}
