--- a/helm/robomind/templates/rustfs-init-job.yaml
+++ b/helm/robomind/templates/rustfs-init-job.yaml
@@ -28,6 +28,7 @@ spec:
         # Wait for RustFS to be ready
         - name: wait-for-rustfs
           image: busybox:1.36
+          imagePullPolicy: IfNotPresent
           command: ['sh', '-c']
           args:
             - |
@@ -37,10 +38,24 @@ spec:
                 sleep 5
               done
               echo "RustFS is ready!"
+          resources:
+            requests:
+              memory: "32Mi"
+              cpu: "10m"
+            limits:
+              memory: "64Mi"
+              cpu: "50m"
       containers:
         - name: init-buckets
           image: "{{ .Values.rustfs.init.image.repository }}:{{ .Values.rustfs.init.image.tag }}"
           imagePullPolicy: {{ .Values.rustfs.init.image.pullPolicy }}
+          resources:
+            requests:
+              memory: "64Mi"
+              cpu: "50m"
+            limits:
+              memory: "256Mi"
+              cpu: "200m"
           env:
             - name: AWS_ACCESS_KEY_ID
               valueFrom:
