--- a/helm/robomind/templates/robot-agent-deployment.yaml
+++ b/helm/robomind/templates/robot-agent-deployment.yaml
@@ -64,6 +64,13 @@ spec:
               value: {{ .Values.robotAgent.env.initialZone | quote }}
             - name: INITIAL_FLOOR
               value: {{ .Values.robotAgent.env.initialFloor | quote }}
+            # VLA Inference Server URL (if enabled)
+            {{- if .Values.vlaInference.enabled }}
+            - name: VLA_SERVER_URL
+              value: "{{ include "robomind.vlaInference.fullname" . }}:{{ .Values.vlaInference.service.grpcPort }}"
+            - name: VLA_ENABLED
+              value: "true"
+            {{- end }}
             # Gemini API Key (optional)
             {{- if .Values.secrets.geminiApiKey }}
             - name: GEMINI_API_KEY
@@ -88,6 +95,16 @@ spec:
             timeoutSeconds: 5
           resources:
             {{- toYaml .Values.robotAgent.resources | nindent 12 }}
+          {{- if .Values.securityContext.readOnlyRootFilesystem }}
+          volumeMounts:
+            - name: tmp
+              mountPath: /tmp
+          {{- end }}
+      {{- if .Values.securityContext.readOnlyRootFilesystem }}
+      volumes:
+        - name: tmp
+          emptyDir: {}
+      {{- end }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
