security(helm): harden RBAC and add readOnlyRootFilesystem support
- Reduce RBAC permissions: remove secrets access, scope to specific configmap
- Add emptyDir mounts for /tmp when readOnlyRootFilesystem is enabled
- App: additional mounts for /var/cache/nginx and /var/run

--- a/helm/robomind/templates/serviceaccount.yaml
+++ b/helm/robomind/templates/serviceaccount.yaml
@@ -19,6 +19,7 @@ automountServiceAccountToken: true
 {{/*
 Role for RoboMindOS pods
 Grants minimal permissions needed for the application
+Note: Secrets are mounted via environment variables, not API access
 */}}
 {{- if .Values.production.rbac.enabled }}
 apiVersion: rbac.authorization.k8s.io/v1
@@ -28,18 +29,16 @@ metadata:
   labels:
     {{- include "robomind.labels" . | nindent 4 }}
 rules:
-  # Allow pods to read their own configmaps and secrets
+  # Allow pods to read their own configmaps (for configuration only)
   - apiGroups: [""]
-    resources: ["configmaps", "secrets"]
-    verbs: ["get", "list", "watch"]
-  # Allow pods to read their own pod info
-  - apiGroups: [""]
-    resources: ["pods"]
-    verbs: ["get", "list", "watch"]
+    resources: ["configmaps"]
+    verbs: ["get"]
+    resourceNames:
+      - {{ include "robomind.fullname" . }}-config
   # Allow pods to read service endpoints (for service discovery)
   - apiGroups: [""]
-    resources: ["services", "endpoints"]
-    verbs: ["get", "list", "watch"]
+    resources: ["endpoints"]
+    verbs: ["get", "list"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
